@@ -81,6 +81,7 @@ Bugfixes:
     HTML pre ("<pre>pre <span>HTML</span></pre>") should not.
   * Return the resized image URL when images of the form
     "[[Image:Example.jpg|200px]]" are used.
+  * Fix issues where image transparency was lost after resizing.
 
 Translation Updates:
 
